@@ -2,6 +2,7 @@
 
 	* Update checklist of things to do before a release: Add the new version to the "TYPO3 Core" project in the Bugtracker.
 	* Code cleanup, simplyfying switch for trunk vs. branch releases
+	* Put updating of TYPO_VERSION to separate function updateTypoVersion()
 
 2007-12-02  Ingmar Schlecht  <ingmar@typo3.org>
 
